# Super-Pixel-Project

./: .gitignore  README.md
Code/: CMakeLists.txt  FonctionsImages.cpp  FonctionsImages.h  Huffman.c  Image.cpp  Image.h  Makefile  build.sh  gradient.ppm  huffman  image_ppm.cpp  image_ppm.h  indice.pgm  main.cpp  main.h  testFonction  testFonction.cpp
Image/: 01_seuil.pgm  YoshiColor.ppm  YoshiSLICC.ppm  YoshiSLICC_A.pgm  YoshiSLICC_B.pgm  YoshiSLICC_L.pgm  YoshiYukataColor.ppm  ai.ppm  aiTest.ppm  aiTest_A.pgm  aiTest_B.pgm  aiTest_L.pgm  frierenFace.ppm  frierenSLICC.ppm  frierenSLICC_A.pgm  frierenSLICC_B.pgm  frierenSLICC_L.pgm  kana.ppm  violetEvergarden.ppm  violetEvergardenSLICC_A.pgm  violetEvergardenSLICC_B.pgm  violetEvergardenSLICC_L.pgm
Image/rendu/: violetEvergardenSLICC.ppm
Liens/: liens.txt
Notes/: notes.txt  notesAlgo.txt
